--- a/404.html
+++ b/404.html
@@ -8,25 +8,26 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BtTBESoP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B1sLt4-S.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DMUGxSNz.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Boed2luj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.qWyYfkMI.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/entry/start.4VPmfGhy.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/entry.8gQK0cqf.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/scheduler.DMUGxSNz.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/entry/app.COaMqwrv.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/index.qWyYfkMI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_lk9sgr = {
-						base: ""
+					__sveltekit_gomtgx = {
+						base: "/schemer",
+						assets: "/schemer"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BtTBESoP.js"),
-						import("/_app/immutable/entry/app.Boed2luj.js")
+						import("/schemer/_app/immutable/entry/start.4VPmfGhy.js"),
+						import("/schemer/_app/immutable/entry/app.COaMqwrv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
