--- a/404.html
+++ b/404.html
@@ -8,17 +8,17 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 		
-		<link rel="modulepreload" href="/schemer/_app/immutable/entry/start.4VPmfGhy.js">
-		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/entry.8gQK0cqf.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/entry/start.BlBn3NOJ.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/entry.Ebxq80Ng.js">
 		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/scheduler.DMUGxSNz.js">
-		<link rel="modulepreload" href="/schemer/_app/immutable/entry/app.COaMqwrv.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/entry/app.cxzQvgen.js">
 		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/index.qWyYfkMI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_gomtgx = {
+					__sveltekit_1jbcvuk = {
 						base: "/schemer",
 						assets: "/schemer"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/schemer/_app/immutable/entry/start.4VPmfGhy.js"),
-						import("/schemer/_app/immutable/entry/app.COaMqwrv.js")
+						import("/schemer/_app/immutable/entry/start.BlBn3NOJ.js"),
+						import("/schemer/_app/immutable/entry/app.cxzQvgen.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
