deploy: def53ea241ea51800ea37e414e2c60f407f50a47

--- a/404.html
+++ b/404.html
@@ -8,17 +8,17 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 		
-		<link rel="modulepreload" href="/schemer/_app/immutable/entry/start.CCN7zPGP.js">
-		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/entry.sJBIhFa3.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/entry/start.CRv4MFtd.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/entry.kD_IxQQj.js">
 		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/scheduler.DMUGxSNz.js">
-		<link rel="modulepreload" href="/schemer/_app/immutable/entry/app.BP8U4PsV.js">
+		<link rel="modulepreload" href="/schemer/_app/immutable/entry/app.BwwkENqe.js">
 		<link rel="modulepreload" href="/schemer/_app/immutable/chunks/index.qWyYfkMI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_9xkyta = {
+					__sveltekit_1oytbqx = {
 						base: "/schemer",
 						assets: "/schemer"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/schemer/_app/immutable/entry/start.CCN7zPGP.js"),
-						import("/schemer/_app/immutable/entry/app.BP8U4PsV.js")
+						import("/schemer/_app/immutable/entry/start.CRv4MFtd.js"),
+						import("/schemer/_app/immutable/entry/app.BwwkENqe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
